--- a/scss/page/_page_dish.scss
+++ b/scss/page/_page_dish.scss
@@ -52,6 +52,11 @@
 
 }
 
+.h3{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 #header {
     & .logo {
         display: flex;
